--- a/static/css/base.css
+++ b/static/css/base.css
@@ -162,6 +162,8 @@ button.navbar-toggler:hover {
 
 /* Footer */
 footer {
+    position: absolute;
+    bottom: 0;
     background-color: #30323d;
     color: #fff;
     padding: 20px;
