Display product count in navbar on small screens

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -195,7 +195,8 @@ footer a:hover {
     }
 
     .nav-link i,
-    .fas.fa-solid.fa-shopping-basket {
+    .fas.fa-solid.fa-shopping-basket,
+    sup {
         color: #fff !important;
     }
 
