--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -41,7 +41,15 @@
     <li class="list-inline-item">
         <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link d-block d-lg-none" href="{% url 'view_basket' %}">
             <div class="text-center">
-                <div><i class="fas fa-solid fa-shopping-basket"></i><sup>{{ 0 }}</sup></div>
+                <div><i class="fas fa-solid fa-shopping-basket"></i>
+                    <sup>
+                        {% if product_count %}
+                        {{ product_count|floatformat:0 }}
+                        {% else %}
+                        0
+                        {% endif %}
+                    </sup>
+                </div>
             </div>
         </a>
     </li>
