--- a/blog/templates/blog/blog_detail.html
+++ b/blog/templates/blog/blog_detail.html
@@ -94,13 +94,13 @@
                             <th scope="row">{{ comment.date_added }}</th>
                             <td>{{ comment.author }}</td>
                             <td>{{ comment.blog_comment }}</td>
-                            <td>{% if request.user == comment.author %}
+                            <td class="icons">{% if request.user == comment.author %}
                                 <a href="{% url 'edit_blog_comment' comment.id %}">
                                     <i class="fa-solid fa-pen-to-square"></i>
                                 </a>
                                 {% endif %}
                             </td>
-                            <td>{% if request.user == comment.author or request.user.is_superuser %}
+                            <td class="icons">{% if request.user == comment.author or request.user.is_superuser %}
                                 <a href="#deleteComment" data-bs-toggle="modal" data-bs-target="#deleteComment">
                                     <i class="fa-solid fa-trash-can"></i>
                                 </a>
