--- a/templates/base.html
+++ b/templates/base.html
@@ -114,6 +114,7 @@
                 </ul>
             </div>
         </div>
+        <!-- Concept of top-nav modified from GymFit, details in README -->
         <div class="row">
             <nav id="top-nav" class="navbar navbar-expand py-0 px-2">
                 <div class="container-fluid px-0 justify-content-end">
