--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -66,12 +66,12 @@
             </div>
         </div>
     </div>
-    <div class="row">
-        <div class="col-12 col-lg-8 offset-lg-2">
+    <div class="row mt-5">
+        <div class="col-12">
             <div class="row">
                 {% for product in products %}
                 <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
-                    <div class="card h-100 border-0">
+                    <div class="card h-100 border-0 m-2">
                         {% if product.image %}
                         <a href="{% url 'product_detail' product.id %}">
                             <img src="{{ product.image.url }}" class="card-img-top img-fluid" alt="{{ product.name }}">
@@ -82,16 +82,17 @@
                                 alt="{{ product.name }}">
                         </a>
                         {% endif %}
-                        <div class="card-body pb-0 text-center">
+                        <div class="card-body pb-0">
                             <a href="{% url 'product_detail' product.id %}">
                                 <h5 class="card-title">{{ product.name }}</h5>
                             </a>
+                            <p>£{{ product.price }}</p>
                             
                         </div>
-                        <div class="card-footer bg-white border-0 text-center">
+                        <div class="card-footer bg-white border-0">
                             <div class="row">
                                 <div class="col-12">
-                                    <p>£{{ product.price }}</p>
+                                    
                                     {% if request.user.is_superuser %}
                                     <small>
                                         <a href="{% url 'edit_product' product.id %}">Edit</a>
