Add additional text fields for blog posts

--- a/blog/templates/blog/blog_detail.html
+++ b/blog/templates/blog/blog_detail.html
@@ -67,7 +67,9 @@
     </div>
     <div class="row mt-4">
         <div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2">
-            <p>{{ blog.blog_content }}</p>
+            <p>{{ blog.blog_content_one }}</p>
+            <p>{{ blog.blog_content_two }}</p>
+            <p>{{ blog.blog_content_three }}</p>
             <a href="{% url 'blogs' %}" class="float-end">
                 <button class="btn btn-sm btn-grey">Back to blogs</button>
             </a>
