--- a/products/static/products/css/products.css
+++ b/products/static/products/css/products.css
@@ -17,3 +17,13 @@ a .card-title {
 #product-title {
     font-size: 2.5rem;
 }
+
+.custom-select {
+    padding: 2px;
+    border-radius: 4px;
+}
+
+#all-products {
+    color: #529afe !important;
+    text-decoration: underline;
+}
