--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -20,7 +20,7 @@
 <div class="container">
     <div class="row">
         <div class="col text-center">
-            <h2>Products</h2>
+            <h2 class="mb-3">Products</h2>
             {% for c in current_categories %}
             <a href="{% url 'products' %}?category={{ c.name }}" class="category-badge text-decoration-none">
                 <span class="p-3 m-1 badge bg-light text-dark custom-badge">{{ c.friendly_name }}</span>
@@ -28,13 +28,13 @@
             {% endfor %}
         </div>
     </div>
-    <div class="row">
-        <div class="product-container col-12">
-            <div class="row mt-1 mb-2">
+    <div class="row mt-5">
+        <div class="col-12">
+            <div class="row mb-2">
                 <div class="col-12 col-md-6 my-auto order-md-last d-flex justify-content-center justify-content-md-end">
                     <div class="sort-select-wrapper w-50">
                         <select id="sort-selector"
-                            class="custom-select custom-select-sm rounded-0 border border-{% if current_sorting != 'None_None' %}info{% else %}black{% endif %}">
+                            class="custom-select border">
                             <option value="reset" {% if current_sorting == 'None_None' %}selected{% endif %}>Sort
                                 by...</option>
                             <option value="price_asc" {% if current_sorting == 'price_asc' %}selected{% endif %}>
@@ -57,7 +57,7 @@
                 <div class="col-12 col-md-6 order-md-first">
                     <p class="text-muted mt-3 text-center text-md-left">
                         {% if search_term or current_categories or current_sorting != 'None_None' %}
-                        <span class="small"><a href="{% url 'products' %}">Products Home</a> | </span>
+                        <span class="small"><a href="{% url 'products' %}" id="all-products" >All Products</a> | </span>
                         {% endif %}
                         {{ products|length }} Products{% if search_term %} found for
                         <strong>"{{ search_term }}"</strong>{% endif %}
@@ -70,8 +70,8 @@
         <div class="col-12">
             <div class="row">
                 {% for product in products %}
-                <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
-                    <div class="card h-100 border-0 m-2">
+                <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-4">
+                    <div class="card h-100 border-0">
                         {% if product.image %}
                         <a href="{% url 'product_detail' product.id %}">
                             <img src="{{ product.image.url }}" class="card-img-top img-fluid" alt="{{ product.name }}">
