Hide blog comment form if user has left one previous

--- a/blog/templates/blog/blog_detail.html
+++ b/blog/templates/blog/blog_detail.html
@@ -148,7 +148,7 @@
            
         </div>
         <div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2 mt-5">
-            {% if request.user.is_authenticated %}
+            {% if not previous_comment %}
             <form action="{% url 'blog_detail' blog.id %}" method="POST">
                 {% csrf_token %}
                 {{ comment_form|crispy }}
