--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -76,7 +76,7 @@
             <h3>Order Summary ({{ product_count }})</h3>
             <hr>
             {% for item in basket_items %}
-            <div class="row basket-item">
+            <div class="row basket-item mb-3">
                 <div class="col-4 col-lg-3">
                     {% if item.product.image %}
                         <img class="img-fluid" src="{{ item.product.image.url }}" alt="{{ item.product.name }}">
@@ -86,14 +86,19 @@
                 </div>
                 <div class="col-8 col-lg-9">
                     <div class="row">
-                        <div class="col-md-12 col-lg-6">
+                        <div class="col-12">
                             <h4 id="basket-item-title">{{ item.product.name }}</h4>
-                            <p class="caption">{% if item.product.has_sizes %}
-                                Size: {{ item.size|upper }}
+                        </div>
+                        <div class="col-md-12 col-lg-6">
+                            
+                            <span class="caption">Size: {% if item.product.has_sizes %}
+                                {{ item.size|upper }}
+                                {% else %}
+                                N/A
                                 {% endif %}
-                            </p>
-                            <p class="caption">Qty: {{ item.quantity }}</p>
-                            <p class="custom-size">£{{ item.product.price }}</p>
+                            </span>
+                            <span id="qty-caption" class="caption">Qty: {{ item.quantity }}</span>
+                            <p class="custom-size mt-3">£{{ item.product.price }}</p>
                         </div>
                     </div>
                 </div>
