--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -217,13 +217,13 @@
                                 <th scope="row" class="d-none d-md-table-cell">{{ review.date_added }}</th>
                                 <td class="d-none d-md-table-cell">{{ review.author }}</td>
                                 <td>{{ review.review_content }}</td>
-                                <td>{% if request.user.id == review.author or request.user.is_superuser %}
+                                <td class="icons">{% if request.user.id == review.author or request.user.is_superuser %}
                                     <a href="{% url 'edit_product_review' review.id %}">
                                         <i class="fa-solid fa-pen-to-square"></i>
                                     </a>
                                     {% endif %}
                                 </td>
-                                <td>{% if request.user == review.author or request.user.is_superuser %}
+                                <td class="icons">{% if request.user == review.author or request.user.is_superuser %}
                                     <a href="#deleteComment" data-bs-toggle="modal" data-bs-target="#deleteComment">
                                         <i class="fa-solid fa-trash-can"></i>
                                     </a>
