--- a/reviews/templates/reviews/edit_review.html
+++ b/reviews/templates/reviews/edit_review.html
@@ -26,7 +26,7 @@
                 {{ form|crispy }}
                 <div class="text-center">
                     <button class="btn btn-blue" type="submit" >Update</button>
-                    <a href="">
+                    <a href="{% url 'product_detail' product.id %}">
                         <button class="btn btn-grey" type="button">Cancel</button>
                     </a>
                 </div>
