--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -185,7 +185,7 @@
             </div>
         </div>
         <div class="row mt-5">
-            <div class="col-12 col-md-6">
+            <div class="col-12 col-md-6 offset-md-1">
                 <h4>Information</h4>
                 <p>SKU: {{ product.sku }}</p>
                 <p>{{ product.description }}</p>
@@ -193,7 +193,7 @@
         </div>
         <!-- Review section -->
         <div class="row mt-5">
-            <div class="col-12">
+            <div class="col-12 col-md-11 offset-md-1">
                 <h4>Reviews</h4>
                 <div class="table-responsive">
                     <table class="table">
