--- a/basket/static/basket/css/basket.css
+++ b/basket/static/basket/css/basket.css
@@ -6,3 +6,11 @@
     font-size: 1.4rem;
     color: #30323d;
 }
+
+.free-delivery {
+    text-align: center;
+    padding: 7px;
+    border-radius: 4px;
+    text-transform: uppercase;
+    border: 4px solid #feb751;
+}
