--- a/static/css/base.css
+++ b/static/css/base.css
@@ -32,6 +32,7 @@ h4 {
     border: 1px solid #e5e5e5;
     padding: 20px;
     margin-bottom: 20px;
+    border-radius: 4px;
 }
 
 .basket-summary p {
@@ -82,6 +83,7 @@ h4 {
     text-align: center;
     background-color: #f8f7f5;
     font-size: 1.1rem;
+    border-radius: 4px;
 }
 
 /* Links and buttons */
