--- a/templates/base.html
+++ b/templates/base.html
@@ -51,7 +51,7 @@
     <title>Surf the Wave {% block extra_title %}{% endblock %}</title>
 </head>
 
-<body>
+<body class="d-flex flex-column h-100">
     <header class="container-fluid fixed-top bg-white">
         <div class="row pt-lg-2 d-none d-lg-flex">
             <div class="col-4 my-auto py-1">
@@ -169,7 +169,7 @@
     {% block content %}
     {% endblock %}
 
-    <footer class="container-fluid mt-5">
+    <footer class="mt-auto">
         <div class="row">
             <div class="col-6">
                 <div class="row">
